infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec: 
      containers:
        - name: client
          image: vanessavmk/client
---
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec:
  selector: 
    app: client # pods que receberão as requests serão os que tem a label = app client
  # type: ClusterIP -> colocar esta linha é opcional pois por padrão já é estabelecido o Service como type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
