infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec: 
      containers:
        - name: comments
          image: vanessavmk/comments
---
apiVersion: v1
kind: Service
metadata: 
  name: comments-srv
spec:
  selector: 
    app: comments # pods que receberão as requests serão os que tem a label = app comments
  # type: ClusterIP -> colocar esta linha é opcional pois por padrão já é estabelecido o Service como type: ClusterIP
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
